[package]
name = "tx_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
rust_decimal = { version = "1.37.1", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tracing = "0.1" # for logging
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
tempfile = "3"

[[bench]]
name = "transaction_processing"
harness = false
